--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier . --check . && eslint .",
     "format": "prettier . --write .",
-    "flint": "npm run format && npm run lint"
+    "flint": "npm run format && npm run lint",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@sveltejs/adapter-vercel": "^4.0.4",
@@ -22,6 +23,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
+    "husky": "^8.0.3",
     "postcss": "^8.4.33",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
@@ -34,5 +36,13 @@
     "typescript": "^5.3.3",
     "vite": "^5.0.11"
   },
-  "type": "module"
+  "type": "module",
+  "lint-staged": {
+    "**/*.{js,ts,svelte}": [
+      "prettier --write",
+      "prettier --check",
+      "eslint --quiet",
+      "npm run check"
+    ]
+  }
 }
