--- a/package.json
+++ b/package.json
@@ -11,30 +11,29 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier . --check . && eslint .",
     "format": "prettier . --write .",
-    "flint": "npm run format && npm run lint",
-    "prepare": "husky install"
+    "flint": "npm run format && npm run lint"
   },
   "devDependencies": {
-    "@sveltejs/adapter-vercel": "^4.0.4",
-    "@sveltejs/kit": "^2.0.6",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "autoprefixer": "^10.4.16",
+    "@sveltejs/adapter-vercel": "^5.1.0",
+    "@sveltejs/kit": "^2.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
-    "husky": "^8.0.3",
+    "husky": "^9.0.6",
     "postcss": "^8.4.33",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.4",
     "prettier-plugin-svelte": "^3.1.2",
-    "sass": "^1.69.7",
-    "svelte": "^4.2.8",
-    "svelte-check": "^3.6.2",
+    "sass": "^1.70.0",
+    "svelte": "^4.2.9",
+    "svelte-check": "^3.6.3",
     "svelte-preprocess": "^5.1.3",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vite": "^5.0.11"
+    "vite": "^5.0.12"
   },
   "type": "module",
   "lint-staged": {
