--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.35.1",
+    "eslint-plugin-svelte": "^2.36.0-next.5",
     "husky": "^9.0.6",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "prettier-plugin-svelte": "^3.1.2",
     "sass": "^1.70.0",
-    "svelte": "^4.2.9",
+    "svelte": "^5.0.0-next.40",
     "svelte-check": "^3.6.3",
     "svelte-preprocess": "^5.1.3",
     "tailwindcss": "^3.4.1",
