--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier . --check . && eslint .",
     "format": "prettier . --write .",
-    "flint": "npm run format && npm run lint"
+    "flint": "npm run format && npm run lint",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@sveltejs/adapter-vercel": "^5.1.0",
@@ -40,8 +41,7 @@
     "**/*.{js,ts,svelte}": [
       "prettier --write",
       "prettier --check",
-      "eslint --quiet",
-      "npm run check"
+      "eslint --quiet"
     ]
   }
 }
