--- a/package.json
+++ b/package.json
@@ -11,29 +11,30 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier . --check . && eslint .",
     "format": "prettier . --write .",
-    "flint": "npm run format && npm run lint"
+    "flint": "npm run format && npm run lint",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@sveltejs/adapter-vercel": "^5.1.0",
     "@sveltejs/kit": "^2.5.0",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
-    "husky": "^9.0.6",
-    "postcss": "^8.4.33",
-    "prettier": "^3.2.4",
-    "prettier-plugin-svelte": "^3.1.2",
-    "sass": "^1.70.0",
-    "svelte": "^4.2.9",
-    "svelte-check": "^3.6.3",
+    "husky": "^9.0.11",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.1",
+    "sass": "^1.71.1",
+    "svelte": "^4.2.11",
+    "svelte-check": "^3.6.4",
     "svelte-preprocess": "^5.1.3",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12"
+    "vite": "^5.1.4"
   },
   "type": "module",
   "lint-staged": {
