--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "**/*.{js,ts,svelte}": [
       "prettier --write",
       "prettier --check",
-      "eslint --quiet",
-      "npm run check"
+      "eslint --quiet"
     ]
   }
 }
