--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "prettier . --check . && eslint .",
     "format": "prettier . --write .",
     "flint": "npm run format && npm run lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "lint-staged": "lint-staged"
   },
   "devDependencies": {
     "@sveltejs/adapter-vercel": "^5.1.0",
@@ -24,11 +25,12 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.36.0-next.5",
     "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.1",
     "sass": "^1.71.1",
-    "svelte": "5.0.0-next.69",
+    "svelte": "5.0.0-next.76",
     "svelte-check": "^3.6.4",
     "svelte-preprocess": "^5.1.3",
     "tailwindcss": "^3.4.1",
@@ -41,7 +43,7 @@
     "**/*.{js,ts,svelte}": [
       "prettier --write",
       "prettier --check",
-      "eslint --quiet"
+      "eslint"
     ]
   }
 }
