--- a/package.json
+++ b/package.json
@@ -13,30 +13,31 @@
     "format": "prettier . --write .",
     "flint": "npm run format && npm run lint",
     "prepare": "husky",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "sync": "svelte-kit sync"
   },
   "devDependencies": {
-    "@sveltejs/adapter-vercel": "^5.1.0",
-    "@sveltejs/kit": "^2.5.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
+    "@sveltejs/adapter-vercel": "^5.3.0",
+    "@sveltejs/kit": "^2.5.6",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.36.0-next.5",
+    "eslint-plugin-svelte": "^2.37.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "prettier-plugin-svelte": "^3.2.1",
-    "sass": "^1.71.1",
-    "svelte": "5.0.0-next.80",
-    "svelte-check": "^3.6.4",
-    "svelte-preprocess": "^5.1.3",
-    "tailwindcss": "^3.4.1",
+    "prettier-plugin-svelte": "^3.2.3",
+    "sass": "^1.75.0",
+    "svelte": "5.0.0-next.106",
+    "svelte-check": "^3.6.9",
+    "svelte-preprocess": "^5.1.4",
+    "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.9"
   },
   "type": "module",
   "lint-staged": {
