--- a/package.json
+++ b/package.json
@@ -17,27 +17,28 @@
     "sync": "svelte-kit sync"
   },
   "devDependencies": {
-    "@sveltejs/adapter-vercel": "^5.4.3",
-    "@sveltejs/kit": "^2.5.26",
+    "@sveltejs/adapter-vercel": "^5.4.5",
+    "@sveltejs/kit": "^2.7.2",
+    "@types/node": "^22.7.7",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.43.0",
-    "husky": "^9.1.5",
+    "eslint-plugin-svelte": "^2.45.1",
+    "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
-    "postcss": "^8.4.45",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "prettier-plugin-svelte": "^3.2.6",
-    "sass": "^1.78.0",
-    "svelte": "5.0.0-next.244",
-    "svelte-check": "^4.0.1",
-    "svelte-preprocess": "^6.0.2",
-    "tailwindcss": "^3.4.10",
-    "tslib": "^2.7.0",
-    "typescript": "^5.6.2",
-    "vite": "^5.4.3"
+    "prettier-plugin-svelte": "^3.2.7",
+    "sass": "^1.80.3",
+    "svelte": "5.0.2",
+    "svelte-check": "^4.0.5",
+    "svelte-preprocess": "^6.0.3",
+    "tailwindcss": "^3.4.14",
+    "tslib": "^2.8.0",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.9"
   },
   "type": "module",
   "lint-staged": {
