--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
     "@sveltejs/adapter-vercel": "^5.4.5",
     "@sveltejs/kit": "^2.7.2",
     "@types/node": "^22.7.7",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@types/eslint": "^9.6.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
+    "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.45.1",
+    "eslint-plugin-svelte": "^2.36.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.47",
@@ -38,6 +37,7 @@
     "tailwindcss": "^3.4.14",
     "tslib": "^2.8.0",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.10.0",
     "vite": "^5.4.9"
   },
   "type": "module",
