--- a/package.json
+++ b/package.json
@@ -17,28 +17,29 @@
     "sync": "svelte-kit sync"
   },
   "devDependencies": {
-    "@sveltejs/adapter-vercel": "^5.4.5",
-    "@sveltejs/kit": "^2.7.2",
-    "@types/node": "^22.7.7",
-    "@types/eslint": "^9.6.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.13.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.36.0",
-    "husky": "^9.1.6",
-    "lint-staged": "^15.2.10",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
-    "prettier-plugin-svelte": "^3.2.7",
-    "sass": "^1.80.3",
-    "svelte": "5.0.2",
-    "svelte-check": "^4.0.5",
-    "svelte-preprocess": "^6.0.3",
-    "tailwindcss": "^3.4.14",
-    "tslib": "^2.8.0",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.10.0",
-    "vite": "^5.4.9"
+    "@sveltejs/adapter-vercel": "5.4.7",
+    "@sveltejs/kit": "2.8.1",
+    "@sveltejs/vite-plugin-svelte": "4.0.1",
+    "@types/node": "22.9.1",
+    "@types/eslint": "9.6.1",
+    "autoprefixer": "10.4.20",
+    "eslint": "9.15.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-svelte": "2.46.0",
+    "husky": "9.1.7",
+    "lint-staged": "15.2.10",
+    "postcss": "8.4.49",
+    "prettier": "3.3.3",
+    "prettier-plugin-svelte": "3.2.8",
+    "sass": "1.81.0",
+    "svelte": "5.2.4",
+    "svelte-check": "4.0.9",
+    "svelte-preprocess": "6.0.3",
+    "tailwindcss": "3.4.15",
+    "tslib": "2.8.1",
+    "typescript": "5.6.3",
+    "typescript-eslint": "8.15.0",
+    "vite": "5.4.11"
   },
   "type": "module",
   "lint-staged": {
