--- a/package.json
+++ b/package.json
@@ -20,22 +20,20 @@
     "@sveltejs/adapter-vercel": "5.5.3",
     "@sveltejs/kit": "2.16.1",
     "@sveltejs/vite-plugin-svelte": "5.0.3",
-    "@types/node": "22.13.0",
+    "@tailwindcss/vite": "^4.0.3",
     "@types/eslint": "9.6.1",
-    "autoprefixer": "10.4.20",
+    "@types/node": "22.13.0",
     "eslint": "9.19.0",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-svelte": "2.46.1",
     "husky": "9.1.7",
     "lint-staged": "15.4.3",
-    "postcss": "8.5.1",
     "prettier": "3.4.2",
     "prettier-plugin-svelte": "3.3.3",
     "sass": "1.83.4",
     "svelte": "5.19.6",
     "svelte-check": "4.1.4",
-    "svelte-preprocess": "6.0.3",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.0.3",
     "tslib": "2.8.1",
     "typescript": "5.7.3",
     "typescript-eslint": "8.22.0",
