--- a/package.json
+++ b/package.json
@@ -17,27 +17,27 @@
     "sync": "svelte-kit sync"
   },
   "devDependencies": {
-    "@sveltejs/adapter-vercel": "5.5.3",
-    "@sveltejs/kit": "2.16.1",
+    "@sveltejs/adapter-vercel": "5.6.1",
+    "@sveltejs/kit": "2.17.1",
     "@sveltejs/vite-plugin-svelte": "5.0.3",
-    "@tailwindcss/vite": "^4.0.3",
+    "@tailwindcss/vite": "4.0.6",
     "@types/eslint": "9.6.1",
-    "@types/node": "22.13.0",
-    "eslint": "9.19.0",
+    "@types/node": "22.13.1",
+    "eslint": "9.20.1",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-svelte": "2.46.1",
     "husky": "9.1.7",
     "lint-staged": "15.4.3",
-    "prettier": "3.4.2",
+    "prettier": "3.5.0",
     "prettier-plugin-svelte": "3.3.3",
-    "sass": "1.83.4",
-    "svelte": "5.19.6",
+    "sass": "1.84.0",
+    "svelte": "5.19.10",
     "svelte-check": "4.1.4",
-    "tailwindcss": "4.0.3",
+    "tailwindcss": "4.0.6",
     "tslib": "2.8.1",
     "typescript": "5.7.3",
-    "typescript-eslint": "8.22.0",
-    "vite": "6.0.11"
+    "typescript-eslint": "8.24.0",
+    "vite": "6.1.0"
   },
   "type": "module",
   "lint-staged": {
