--- a/package.json
+++ b/package.json
@@ -17,27 +17,28 @@
     "sync": "svelte-kit sync"
   },
   "devDependencies": {
-    "@sveltejs/adapter-vercel": "5.6.3",
-    "@sveltejs/kit": "2.18.0",
+    "@sveltejs/adapter-vercel": "5.7.2",
+    "@sveltejs/kit": "2.20.8",
     "@sveltejs/vite-plugin-svelte": "5.0.3",
-    "@tailwindcss/vite": "4.0.9",
+    "@tailwindcss/vite": "4.1.6",
     "@types/eslint": "9.6.1",
-    "@types/node": "22.13.9",
-    "eslint": "9.21.0",
-    "eslint-config-prettier": "10.0.2",
-    "eslint-plugin-svelte": "3.0.2",
+    "@types/node": "22.15.17",
+    "eslint": "9.26.0",
+    "eslint-config-prettier": "10.1.5",
+    "eslint-plugin-svelte": "3.5.1",
     "husky": "9.1.7",
-    "lint-staged": "15.4.3",
+    "lint-staged": "15.5.2",
     "prettier": "3.5.3",
     "prettier-plugin-svelte": "3.3.3",
-    "sass": "1.85.1",
-    "svelte": "5.22.1",
-    "svelte-check": "4.1.4",
-    "tailwindcss": "4.0.9",
+    "sass": "1.87.0",
+    "svelte": "5.28.2",
+    "svelte-check": "4.1.7",
+    "tailwindcss": "4.1.6",
     "tslib": "2.8.1",
-    "typescript": "5.8.2",
-    "typescript-eslint": "8.26.0",
-    "vite": "6.2.0"
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.32.0",
+    "vite": "6.3.5",
+    "vite-plugin-devtools-json": "^0.1.0"
   },
   "type": "module",
   "lint-staged": {
